change root file

--- a/4_koa/app/01_ht_chat_koa_rewritten/index.pug
+++ b/4_koa/app/01_ht_chat_koa_rewritten/index.pug
@@ -1,8 +1,7 @@
 doctype html
 html
   body
-    h1
-        welcome to chat!
+    h1 Welcome to chat!
     form
         input(type="text" name="message")
         input(type="submit" value="Send")
