--- a/4_koa/app/templates/login.pug
+++ b/4_koa/app/templates/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  form(action="/auth/login" method="post")
+  form(action="/login" method="post")
     h1 Please sign in
     .form-group
       label(for="email") Email
