--- a/4_koa/app/templates/registration.pug
+++ b/4_koa/app/templates/registration.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  form(action="/login" method="post")
-    h1 Please sign in
+  form(action="/signup" method="post")
+    h1 Enter your credentials
     .form-group
       label(for="email") Email
       input.form-control(type="email" id="email" name="email" placeholder="my@mail.com" required autofocus)
@@ -12,6 +12,4 @@ block content
     input(type="hidden" name="_csrf" value=csrf())
 
     button.btn.btn-lg.btn-primary.btn-block(type="submit") Login
-  br
-  a.btn.btn-lg.btn-primary.btn-block(href="/login/facebook") Login via facebook
     script(src="/auth.js")
